[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://art/coal.png" type="Texture" id=2]
[ext_resource path="res://art/sun shard.png" type="Texture" id=3]
[ext_resource path="res://art/uranium.png" type="Texture" id=4]
[ext_resource path="res://art/wood.png" type="Texture" id=5]
[ext_resource path="res://art/oil.png" type="Texture" id=6]
[ext_resource path="res://art/scraps.png" type="Texture" id=7]
[ext_resource path="res://art/solar panel.png" type="Texture" id=8]
[ext_resource path="res://art/nuke generator.png" type="Texture" id=9]
[ext_resource path="res://art/coal plant.png" type="Texture" id=10]
[ext_resource path="res://art/furnace.png" type="Texture" id=11]
[ext_resource path="res://art/energy.png" type="Texture" id=12]
[ext_resource path="res://ShowButtonNormal.tres" type="StyleBox" id=13]
[ext_resource path="res://ShowButton.tres" type="StyleBox" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.423529, 0.435294, 0.733333 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.376471, 0.517647, 0.529412, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.439216, 0.623529, 0.639216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.294118, 0.423529, 0.435294, 0.733333 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="Animation" id=7]
resource_name = "HideResources"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Resources:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, -304, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Resources:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShowResources:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 368, -0.25, 0, 0.25, 0, 48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ShowResources:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 240, -0.25, 0, 0.25, 0, 240, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Resources:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Resources:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShowResources:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 352, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ShowResources:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 240, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "ShowResources"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Resources:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -304, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Resources:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShowResources:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 48, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ShowResources:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 240, -0.25, 0, 0.25, 0, 240, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="GUI" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Resources" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -196.0
margin_bottom = 188.0
custom_styles/panel = SubResource( 1 )

[node name="Resources" type="Label" parent="Resources"]
anchor_right = 1.0
margin_top = 7.0
margin_right = -152.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
text = "Resources"
align = 1

[node name="CoalStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 47.0
margin_right = 285.0
margin_bottom = 74.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="CoalAmount" type="Label" parent="Resources/CoalStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="Coal" type="TextureRect" parent="Resources/CoalStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true

[node name="OilStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 95.0
margin_right = 285.0
margin_bottom = 122.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="OilAmount" type="Label" parent="Resources/OilStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="Oil" type="TextureRect" parent="Resources/OilStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 6 )
expand = true

[node name="UraniumStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 143.0
margin_right = 285.0
margin_bottom = 170.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="UraniumAmount" type="Label" parent="Resources/UraniumStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="Uranium" type="TextureRect" parent="Resources/UraniumStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 4 )
expand = true

[node name="SolarStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 191.0
margin_right = 285.0
margin_bottom = 218.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="SolarAmount" type="Label" parent="Resources/SolarStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="Sun" type="TextureRect" parent="Resources/SolarStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="WoodStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 287.0
margin_right = 285.0
margin_bottom = 314.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="WoodAmount" type="Label" parent="Resources/WoodStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="Wood" type="TextureRect" parent="Resources/WoodStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="EnergyStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 336.0
margin_right = 285.0
margin_bottom = 363.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="EnergyAmount" type="Label" parent="Resources/EnergyStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="Energy" type="TextureRect" parent="Resources/EnergyStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 12 )
expand = true

[node name="MetalScrapsStorage" type="ProgressBar" parent="Resources"]
margin_left = 48.0
margin_top = 239.0
margin_right = 285.0
margin_bottom = 266.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = -10.0
rounded = true
percent_visible = false

[node name="MetalScrapsAmount" type="Label" parent="Resources/MetalScrapsStorage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"
align = 1
valign = 1

[node name="MetalScraps" type="TextureRect" parent="Resources/MetalScrapsStorage"]
margin_left = -40.0
margin_top = -11.0
margin_right = -1.0
margin_bottom = 32.0
texture = ExtResource( 7 )
expand = true

[node name="Mines" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -100.0
margin_right = -8.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 2 )

[node name="CoalMine" type="Button" parent="Mines"]
margin_left = 96.0
margin_top = 88.0
margin_right = 166.0
margin_bottom = 148.0
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[node name="UraniumMine" type="Button" parent="Mines"]
margin_left = 8.0
margin_top = 88.0
margin_right = 78.0
margin_bottom = 148.0
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="SolarMine" type="Button" parent="Mines"]
margin_left = 8.0
margin_top = 8.0
margin_right = 78.0
margin_bottom = 68.0
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="OilMine" type="Button" parent="Mines"]
margin_left = 96.0
margin_top = 8.0
margin_right = 166.0
margin_bottom = 68.0
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Generators" type="Panel" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -100.0
margin_right = -8.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 2 )

[node name="CoalGenerator" type="Button" parent="Generators"]
margin_left = 96.0
margin_top = 88.0
margin_right = 166.0
margin_bottom = 148.0
icon = ExtResource( 11 )
icon_align = 1
expand_icon = true

[node name="UraniumGenerator" type="Button" parent="Generators"]
margin_left = 8.0
margin_top = 88.0
margin_right = 78.0
margin_bottom = 148.0
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="SolarGenerator" type="Button" parent="Generators"]
margin_left = 8.0
margin_top = 8.0
margin_right = 78.0
margin_bottom = 68.0
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="OilGenerator" type="Button" parent="Generators"]
margin_left = 96.0
margin_top = 8.0
margin_right = 166.0
margin_bottom = 68.0
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true

[node name="ShowResources" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -60.0
margin_right = 168.0
margin_bottom = -12.0
rect_rotation = 90.0
custom_styles/hover = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
text = "Show Resources"

[node name="ShowMines" type="Button" parent="."]
margin_left = 842.0
margin_top = 177.0
margin_right = 930.0
margin_bottom = 201.0
custom_styles/hover = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
text = "Mines"

[node name="ShowGenerators" type="Button" parent="."]
margin_left = 930.0
margin_top = 177.0
margin_right = 1018.0
margin_bottom = 201.0
custom_styles/hover = ExtResource( 14 )
custom_styles/normal = ExtResource( 13 )
text = "Generators"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/HideResources = SubResource( 7 )
anims/RESET = SubResource( 5 )
anims/ShowResources = SubResource( 6 )

[connection signal="pressed" from="Mines/CoalMine" to="." method="_on_CoalMine_pressed"]
[connection signal="pressed" from="Mines/UraniumMine" to="." method="_on_UraniumMine_pressed"]
[connection signal="pressed" from="Mines/SolarMine" to="." method="_on_SolarMine_pressed"]
[connection signal="pressed" from="Mines/OilMine" to="." method="_on_OilMine_pressed"]
[connection signal="pressed" from="Generators/CoalGenerator" to="." method="_on_CoalMine_pressed"]
[connection signal="pressed" from="Generators/UraniumGenerator" to="." method="_on_UraniumMine_pressed"]
[connection signal="pressed" from="Generators/SolarGenerator" to="." method="_on_SolarMine_pressed"]
[connection signal="pressed" from="Generators/OilGenerator" to="." method="_on_WoodMine_pressed"]
[connection signal="pressed" from="ShowResources" to="." method="_on_ShowResources_pressed"]
[connection signal="pressed" from="ShowMines" to="." method="_on_ShowMines_pressed"]
[connection signal="pressed" from="ShowGenerators" to="." method="_on_ShowGenerators_pressed"]
